Fix CORS preflight: permit OPTIONS requests and configure allowed origin patterns